--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,16 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_requests"
-        android:icon="@drawable/ic_requests"
-        android:title="@string/requests" />
+        android:id="@+id/navigation_projects"
+        android:icon="@drawable/ic_projects"
+        android:title="@string/projects" />
 
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_profile"
         android:title="@string/profile" />
 
-    <item android:title="@string/empty" />
 
 
     <item
