--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -40,6 +40,7 @@
                     android:layout_marginStart="5dp"
                     android:text="@string/project_name"
                     android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:textSize="24sp" />
 
             </LinearLayout>
