--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/profile"
         android:textColor="@color/black"
+        android:textStyle="bold"
         android:textSize="24sp" />
 
 
