--- a/app/src/main/res/layout/bottom_sheet_choose_lang.xml
+++ b/app/src/main/res/layout/bottom_sheet_choose_lang.xml
@@ -45,6 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/english"
+                android:textAlignment="viewStart"
                 android:textColor="@color/gray"
                 android:textSize="18sp" />
 
