--- a/app/src/main/res/drawable/add_forms_curved.xml
+++ b/app/src/main/res/drawable/add_forms_curved.xml
@@ -2,8 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/white"
-        android:width="1dp"/>
-
-    <corners android:radius="8dp"/>
+        android:color="@color/list_item_bg"/>
+    <corners android:radius="20dp"/>
 </shape>
