--- a/app/src/main/res/drawable/service_type_curved.xml
+++ b/app/src/main/res/drawable/service_type_curved.xml
@@ -2,8 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/white"
-        android:width="1dp"/>
-
+        android:color="@color/service_type_bg"/>
     <corners android:radius="8dp"/>
 </shape>
