--- a/app/src/main/res/layout/activity_add_printing.xml
+++ b/app/src/main/res/layout/activity_add_printing.xml
@@ -90,7 +90,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/et_gray_border"
+                    android:background="@drawable/et_white"
                     android:hint="@string/item_name"
                     android:importantForAutofill="no"
                     android:inputType="text"
@@ -117,7 +117,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/et_gray_border"
+                    android:background="@drawable/et_white"
                     android:hint="@string/quantity"
                     android:importantForAutofill="no"
                     android:inputType="number"
@@ -144,7 +144,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/et_gray_border"
+                    android:background="@drawable/et_white"
                     android:gravity="top"
                     android:hint="@string/description"
                     android:importantForAutofill="no"
@@ -173,7 +173,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/et_gray_border"
+                    android:background="@drawable/et_white"
                     android:hint="@string/pages"
                     android:importantForAutofill="no"
                     android:inputType="number"
@@ -200,7 +200,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/et_gray_border"
+                    android:background="@drawable/et_white"
                     android:hint="@string/paper_weight"
                     android:importantForAutofill="no"
                     android:inputType="number"
@@ -262,7 +262,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/et_gray_border"
+                    android:background="@drawable/et_white"
                     android:hint="@string/colors"
                     android:importantForAutofill="no"
                     android:inputType="number"
@@ -408,7 +408,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/et_gray_border"
+                    android:background="@drawable/et_white"
                     android:hint="@string/delivery_address"
                     android:importantForAutofill="no"
                     android:inputType="text"
@@ -436,7 +436,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/et_gray_border"
+                    android:background="@drawable/et_white"
                     android:gravity="top"
                     android:hint="@string/notes"
                     android:importantForAutofill="no"
@@ -466,7 +466,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:padding="5dp"
-                    android:background="@drawable/et_gray_border">
+                    android:background="@drawable/et_white">
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/choose_file"
