--- a/app/src/main/res/layout/activity_add_printing.xml
+++ b/app/src/main/res/layout/activity_add_printing.xml
@@ -23,7 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_back"
-            app:tint="@color/black" />
+            app:tint="@color/black"
+            android:contentDescription="@string/description" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -39,13 +40,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/add_forms_curved"
-        android:padding="15dp">
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/add_forms_curved"
+            android:padding="15dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -232,15 +233,15 @@
                         android:id="@+id/digital"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/digital" />
+                        android:text="@string/digital"
+                        android:checked="true"/>
 
                     <RadioButton
                         android:id="@+id/offset"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="@string/offset"
-                        android:checked="true" />
+                        android:text="@string/offset" />
                 </RadioGroup>
             </LinearLayout>
 
@@ -487,6 +488,34 @@
                 </LinearLayout>
 
 
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/designer_in_charge"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/designer_in_charge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/et_white"
+                    android:hint="@string/designer_in_charge"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
             </LinearLayout>
 
 
