--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,7 +82,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/btn_yellow"
         android:baselineAligned="false"
-        android:text="@string/sign_in"
+        android:text="@string/login"
         android:textColor="@color/black" />
 
 
