--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
 
-        <item name="android:windowLightStatusBar" tools:targetApi="m"> true</item>
-        <item name="android:statusBarColor" tools:targetApi="lollipop"> @color/white </item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/white</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
 
@@ -13,22 +13,38 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-
+        //bottom sheet style
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
+
+        //font style
+<!--        <item name="android:textViewStyle">@style/PoppinsTextViewStyle</item>-->
+<!--        <item name="android:buttonStyle">@style/PoppinsButtonStyle</item>-->
+<!--        <item name="android:editTextStyle">@style/PoppinsEditTextStyle</item>-->
+
 
     </style>
 
 
-    <style name="AppBottomSheetDialogTheme"
-        parent="Theme.Design.Light.BottomSheetDialog">
+    <style name="AppBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/AppModalStyle</item>
     </style>
 
-    <style name="AppModalStyle"
-        parent="Widget.Design.BottomSheet.Modal">
+    <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/bottomsheet_bg</item>
     </style>
 
+
+    <style name="PoppinsTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+    </style>
+
+    <style name="PoppinsButtonStyle" parent="android:Widget.Button">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+    </style>
+
+    <style name="PoppinsEditTextStyle" parent="android:Widget.EditText">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+    </style>
 
 
 </resources>
