--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -48,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="@drawable/et_white"
+            android:background="@drawable/et_gray_border"
             android:importantForAutofill="no"
             android:inputType="text"
             android:padding="10dp"
@@ -75,7 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="@drawable/et_white"
+            android:background="@drawable/et_gray_border"
             android:importantForAutofill="no"
             android:inputType="textEmailAddress"
             android:padding="10dp"
