--- a/app/src/main/res/layout/activity_add_production.xml
+++ b/app/src/main/res/layout/activity_add_production.xml
@@ -40,7 +40,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -402,7 +403,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
                 android:background="@drawable/btn_yellow"
                 android:baselineAligned="false"
                 android:text="@string/send_request"
